--- a/HeartRateMonitor/AndroidManifest.xml
+++ b/HeartRateMonitor/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity
             android:name="HeartRateMonitor"
             android:label="@string/app_name"
-            android:screenOrientation="sensorLandscape" >
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
