--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -1,13 +1,24 @@
 cmake_minimum_required(VERSION 2.8)
 
+include(ExternalProject)
+
 set(3RDPARTY_BUILD_TYPE Release)
 set(3RDPARTY_INSTALL ${CMAKE_BINARY_DIR}/3RDPARTY)
 
 file(MAKE_DIRECTORY ${3RDPARTY_INSTALL})
 
 add_subdirectory(boost)
+add_subdirectory(gtest)
 
+set(PREPARE prepare_repository)
+if(ANDROID)
 add_custom_target(
-    prepare_repository
-    DEPENDS ext_boost
+    ${PREPARE}
+    DEPENDS ext_boost 
     )
+else()
+add_custom_target(
+    ${PREPARE}
+    DEPENDS ext_gtest
+    )
+endif()
