gtest install complete new frame test

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -6,6 +6,8 @@ set(3RDPARTY_BUILD_TYPE Release)
 set(3RDPARTY_INSTALL ${CMAKE_BINARY_DIR}/3RDPARTY)
 
 file(MAKE_DIRECTORY ${3RDPARTY_INSTALL})
+file(MAKE_DIRECTORY ${3RDPARTY_INSTALL}/lib)
+file(MAKE_DIRECTORY ${3RDPARTY_INSTALL}/include)
 
 add_subdirectory(boost)
 add_subdirectory(gtest)
