--- a/modules/libheartbeatrate/CMakeLists.txt
+++ b/modules/libheartbeatrate/CMakeLists.txt
@@ -9,6 +9,7 @@ set(SOURCES
     src/HeartRateProcessor.cpp
     src/RGBFrameSource.cpp
     src/NV21FrameSource.cpp
+    src/HeartBeatRateTypes.cpp
     )
 
 add_library(${PROJECT_NAME} ${SOURCES})
