added image view heart rate visualizer out test image heart rate counter model works

--- a/modules/libheartbeatrate/CMakeLists.txt
+++ b/modules/libheartbeatrate/CMakeLists.txt
@@ -19,6 +19,7 @@ set(SOURCES
 if(ANDROID)
     set(SOURCES ${SOURCES}
         src/AndroidLog.cpp
+        src/ImageViewHeartRateVisualizer.cpp
         )
 else()
     set(SOURCES ${SOURCES}
@@ -28,15 +29,15 @@ endif()
 
 add_library(${PROJECT_NAME} ${SOURCES})
 
-if(ANDROID)
-    set(LIBS 
-        boost_system-gcc-mt-1_55
-        boost_thread-gcc-mt-1_55
-        )
-else()
-    set(LIBS
-        boost_system.a
-        boost_thread.a
-        )
-endif()
-target_link_libraries(${PROJECT_NAME} ${LIBS})
+#if(ANDROID)
+#    set(LIBS 
+#        boost_system-gcc-mt-1_55
+#        boost_thread-gcc-mt-1_55
+#        )
+#else()
+#    set(LIBS
+#        boost_system.a
+#        boost_thread.a
+#        )
+#endif()
+#target_link_libraries(${PROJECT_NAME} ${LIBS})
