added different image formats support

--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 2.8)
 
 if(ANDROID)
 else()
-    add_subdirectory(frame_test)
+    # add_subdirectory(frame_test)
 endif()
 
