move heart rate monitor for android to apps     and new cmake build system

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,3 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
-add_subdirectory(heart_rate_monitor_test)
+if(ANDROID)
+    add_subdirectory(HeartRateMonitor)
+else()
+    add_subdirectory(heart_rate_monitor_test)
+endif()
