added output apk some fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,13 @@ cmake_minimum_required(VERSION 2.8)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_LIST_DIR}/cmake/")
 if(ANDROID)
 
-    include(FindAndroidBoost)
-    if(ABOOST_FOUND)
-        include_directories(${ABOOST_INCLUDE_DIR})
-        link_directories(${ABOOST_LIB_DIR})
-    endif(ABOOST_FOUND)
+    include(Android)
+
+    find_package(AndroidBoost REQUIRED)
+    if(AndroidBoost_FOUND)
+        include_directories(${AndroidBoost_INCLUDE_DIR})
+        link_directories(${AndroidBoost_LIB_DIR})
+    endif(AndroidBoost_FOUND)
     
     include_directories(${ANDROID_NDK}/platforms/android-${ANDROID_NATIVE_API_LEVEL}/arch-arm/usr/include)
 
