--- a/apps/HeartRateMonitor/java/AndroidManifest.xml
+++ b/apps/HeartRateMonitor/java/AndroidManifest.xml
@@ -19,9 +19,9 @@
         android:name="android.hardware.camera.flash"
         android:required="false" />
 
+        <!-- android:debuggable="true" -->
     <application
         android:allowBackup="true"
-        android:debuggable="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Light" >
