install boost for android in android ndk user dir and using zenity new cmake for android script using zenity boost now find using find_package for android and linux fix all cmake

--- a/apps/HeartRateMonitor/CMakeLists.txt
+++ b/apps/HeartRateMonitor/CMakeLists.txt
@@ -19,7 +19,7 @@ set(SOURCES
     )
 add_library(${HRM_CPP} SHARED ${SOURCES})
 
-target_link_libraries(${HRM_CPP} ${AndroidBoost_LIBRARIES} android log jnigraphics)
+target_link_libraries(${HRM_CPP} ${Boost_LIBRARIES} android log jnigraphics)
 
 set(LIBS
     heartbeatrate
