--- a/apps/heart_rate_monitor_test/CMakeLists.txt
+++ b/apps/heart_rate_monitor_test/CMakeLists.txt
@@ -9,4 +9,4 @@ set(SOURCES
 
 add_executable(${PROJECT_NAME} ${SOURCES})
 
-target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} heartbeatrate)
+target_link_libraries(${PROJECT_NAME} ${Boost_LIBRARIES} heartrate)
