--- a/modules/libheartrate/CMakeLists.txt
+++ b/modules/libheartrate/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 
-set(PROJECT_NAME heartbeatrate)
+set(PROJECT_NAME heartrate)
 project(${PROJECT_NAME})
 
 include_directories(
