--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,7 +1,15 @@
 cmake_minimum_required(VERSION 2.8)
 
 if(ANDROID)
+    
     add_subdirectory(HeartRateMonitor)
+    
 else()
-    add_subdirectory(heart_rate_monitor_test)
+    
+    if(OpenCV_FOUND)
+    
+        add_subdirectory(heart_rate_monitor_test)
+        
+    endif(OpenCV_FOUND)
+    
 endif()
