last changes added png data base to rgb frame source added find fftw3 cmake module added new program for test fftw3 added heart rate recognizer interface with mock concrete class added concrete fftw3 heart rate recognizer class need debug added two exception classes

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -6,10 +6,12 @@ if(ANDROID)
     
 else()
     
-    if(OpenCV_FOUND)
+    if(OpenCV_FOUND AND FFTW3_FOUND)
     
         add_subdirectory(heart_rate_monitor_test)
         
-    endif(OpenCV_FOUND)
+        add_subdirectory(fftw_test_app)
+        
+    endif(OpenCV_FOUND AND FFTW3_FOUND)
     
 endif()
