--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,13 +13,25 @@ endif(ANDROID)
 set(Boost_USE_STATIC_LIBS    ON)
 set(Boost_USE_MULTITHREADED  ON)
 set(Boost_COMPILER -gcc)
-find_package(Boost 1.53.0 REQUIRED COMPONENTS system thread)
+find_package(Boost 1.53.0 REQUIRED 
+    COMPONENTS 
+        system 
+        thread
+)
 
 # find fftw
-find_package(FFTW)
+find_package(FFTW3)
+if(FFTW3_FOUND)
+    add_definitions(-DFFTW3_FOUND)
+endif(FFTW3_FOUND)
 
 # find OpenCV
-find_package(OpenCV COMPONENTS core imgproc highgui)
+find_package(OpenCV 
+    COMPONENTS 
+        core 
+        imgproc 
+        highgui
+)
 
 # find gtest
 find_package(GTest)
@@ -30,13 +42,23 @@ if(PNG_FOUND)
     add_definitions(-DPNG_FOUND)
 endif(PNG_FOUND)
 
+# include dependencies
 include_directories(
     ${Boost_INCLUDE_DIRS}
+    ${FFTW3_INCLUDE_DIRS}
     ${OpenCV_INCLUDE_DIRS}
     ${PNG_INCLUDE_DIRS}
 )
 
-add_definitions(-std=c++11)
+# include modules
+include_directories(
+    ${CMAKE_SOURCE_DIR}/modules/libheartrate/include
+)
+
+add_definitions(
+    -std=c++11
+    ${PNG_DEFINITIONS}
+)
 
 add_subdirectory(modules)
 
