added heart rate monitor for mingw

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,5 +1,15 @@
 cmake_minimum_required(VERSION 2.8)
 
+if(MINGW AND NOT ANDROID)
+
+    if(OpenCV_FOUND)
+
+        add_subdirectory(HeartRateMonitor_MinGW)
+
+    endif()
+
+endif()
+
 if(ANDROID)
     
     add_subdirectory(HeartRateMonitor)
@@ -12,6 +22,6 @@ else()
         
         add_subdirectory(fftw_test_app)
         
-    endif(OpenCV_FOUND AND FFTW3_FOUND)
+    endif()
     
 endif()
