change heart rate library now build

--- a/modules/libheartrate/CMakeLists.txt
+++ b/modules/libheartrate/CMakeLists.txt
@@ -4,32 +4,34 @@ set(PROJECT_NAME heartrate)
 project(${PROJECT_NAME})
 
 set(SOURCES
-    src/HeartBeatRateTypes.cpp
-    src/HeartRateTools.cpp
-    src/NV21FrameSource.cpp
-    src/RGBFrameSource.cpp
-    src/HeartRateCounter.cpp
-    src/RGBHeartRateGenerator.cpp
-    src/Types.cpp
-
-    src/mocks/MockHeartRateVisualizer.cpp
-    src/mocks/MockHeartRateGenerator.cpp
-    src/mocks/MockNV21FrameSource.cpp
-    src/mocks/MockRGBFrameSource.cpp
-    src/mocks/MockHeartRateFrequencyVisualizer.cpp
-    src/mocks/MockHeartRateRecognizer.cpp
+    # src/HeartBeatRateTypes.cpp
+    # src/HeartRateTools.cpp
+    # src/NV21FrameSource.cpp
+    # src/RGBFrameSource.cpp
+    # src/HeartRateCounter.cpp
+    # src/RGBHeartRateGenerator.cpp
+    # src/Types.cpp
+    # 
+    # src/mocks/MockHeartRateVisualizer.cpp
+    # src/mocks/MockHeartRateGenerator.cpp
+    # src/mocks/MockNV21FrameSource.cpp
+    # src/mocks/MockRGBFrameSource.cpp
+    # src/mocks/MockHeartRateFrequencyVisualizer.cpp
+    # src/mocks/MockHeartRateRecognizer.cpp
+    
+    src/HeartRate.cpp
     )
 
 if(PNG_FOUND)
     set(SOURCES ${SOURCES}
-        src/RGB2PNGDataBaseFrameDrawer.cpp
-        src/PNGDataBase2RGBFrameSource.cpp
+        # src/RGB2PNGDataBaseFrameDrawer.cpp
+        # src/PNGDataBase2RGBFrameSource.cpp
         )
 endif(PNG_FOUND)
 
 if(FFTW3_FOUND)
     set(SOURCES ${SOURCES}
-        src/FFTWHeartRateRecognizer.cpp
+        # src/FFTWHeartRateRecognizer.cpp
     )
 endif(FFTW3_FOUND)
 
